* Added file attachments to parts (Chris T)
* Added file attachments to customers, vendors, employees, leads etc (Chris T)
* LaTeX format detection now run-time call, not configured (Chris T)
* Bringing back inactivity-based logouts (Chris T)

New RESTful Web Services Framework
* Supports XML and JSON as input formats
* Supports XML and JSON as output formats

New Reporting Framework
* Easy bridge between SQL and display (Chris T)
* All reports exportable to CSV (Chris T)
* All reports exportable to PDF (Chris T)
* Unified UI for reports (Chris T)

Customer/Vendor Handling 
* Added sales tax id and license number fields for companies (Chris T)
* Simpified database schema (Chris T)
* Full text search of notes for customers/vendors (Chris T)

New CSV Import Module
* Imports GL transactions (Chris T)
* Imports AP batches (Chris T)
* Imports charts of accounts entries (Erik H)
* Imports GIFI tables (Erik H)
* Imports SIC tables (Erik H)
* Imports timecards (Chris T)
* Imports initial inventory and periodic counts (Chris T)
* Extensible
* field maps can be overridden


New Business Reporting Unit System (Chris T)
* Replaces Projects and Departments
* Business reporting units may be nested
* Allows one to do funds accounting, track jobs separately from projects, etc
* Report on any combination of business reporting units (up to one per class)

Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.20
* Fixes for es_AR translation, duplicate keys removed (Andres B)
* Demo templates provide better handling of paragraph breaks in notes (Chris T)
* Fixed menu anomilies due to menu grants on sub-menus (Chris T)
* Fixed unable to change order or delete it (Chris T, 3535856)
* Fixed invalid syntax for integer on saving employee (Chris T)
* Cleaned up dates lines on employee screen (Chris T)
* Added access to parts.image for ar invoice, order, quote templates (Chris T)